[package]
name = "another-world-engine"
version = "0.1.0"
authors = ["César Botana <cesar@hotmail.com>"]
edition = "2018"
default-run = "awgame"

[lib]
name = "awlib"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "awgame"
path = "src/bin/main.rs"
required-features = ["game"]

[dependencies]
wasm-bindgen = "0.2.62"
byte-slice-cast = "0.3.5"
zip = { version = "0.5.8", optional = true }
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"], optional = true }
gl = { version = "0.14.0", optional = true }

[features]
game = ["zip", "sdl2", "gl"]
